--- a/cxconsts.html
+++ b/cxconsts.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxconsts</title>
+<title>nimcx/cxconsts</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -64,7 +64,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxconsts</h1>
+    <h1 class="title">nimcx/cxconsts</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -204,11 +204,11 @@ window.addEventListener('DOMContentLoaded', main);
   <li><a class="reference" href="#resetcols"
     title="resetcols = &quot;\e[0m&quot;">resetcols</a></li>
   <li><a class="reference" href="#CRLF"
-    title="CRLF = &quot;\c\n&quot;">CRLF</a></li>
+    title="CRLF = &quot;\r\n&quot;">CRLF</a></li>
   <li><a class="reference" href="#SP"
     title="SP = &quot; &quot;">SP</a></li>
   <li><a class="reference" href="#CR"
-    title="CR = &quot;\c&quot;">CR</a></li>
+    title="CR = &quot;\r&quot;">CR</a></li>
   <li><a class="reference" href="#LF"
     title="LF = &quot;\n&quot;">LF</a></li>
   <li><a class="reference" href="#cup"
@@ -1843,7 +1843,7 @@ reset colors
 
 </dd>
 <a id="CRLF"></a>
-<dt><pre><a href="cxconsts.html#CRLF"><span class="Identifier">CRLF</span></a> <span class="Other">=</span> <span class="StringLit">&quot;\c\n&quot;</span></pre></dt>
+<dt><pre><a href="cxconsts.html#CRLF"><span class="Identifier">CRLF</span></a> <span class="Other">=</span> <span class="StringLit">&quot;\r\n&quot;</span></pre></dt>
 <dd>
 
 
@@ -1857,7 +1857,7 @@ reset colors
 
 </dd>
 <a id="CR"></a>
-<dt><pre><a href="cxconsts.html#CR"><span class="Identifier">CR</span></a> <span class="Other">=</span> <span class="StringLit">&quot;\c&quot;</span></pre></dt>
+<dt><pre><a href="cxconsts.html#CR"><span class="Identifier">CR</span></a> <span class="Other">=</span> <span class="StringLit">&quot;\r&quot;</span></pre></dt>
 <dd>
 
 
@@ -5510,7 +5510,7 @@ index into cxcolorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:57:56 UTC</small>
       </div>
     </div>
   </div>
