--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxnetwork</title>
+<title>nimcx/cxnetwork</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -64,7 +64,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxnetwork</h1>
+    <h1 class="title">nimcx/cxnetwork</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -193,8 +193,11 @@ window.addEventListener('DOMContentLoaded', main);
 <li>
   <a class="reference reference-toplevel" href="#15" id="65">Iterators</a>
   <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">parseIps
       <li><a class="reference" href="#parseIps.i%2Cstring"
-    title="parseIps(soup: string): string">parseIps</a></li>
+    title="parseIps(soup: string): string">parseIps(soup: string): string</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -429,7 +432,7 @@ window.addEventListener('DOMContentLoaded', main);
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:08 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:57:27 UTC</small>
       </div>
     </div>
   </div>
