--- a/cxtime.html
+++ b/cxtime.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxtime</title>
+<title>nimcx/cxtime</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -64,7 +64,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxtime</h1>
+    <h1 class="title">nimcx/cxtime</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -317,16 +317,31 @@ window.addEventListener('DOMContentLoaded', main);
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">cxDateTime
+      <li><a class="reference" href="#cxDateTime.t"
+    title="cxDateTime(): untyped">cxDateTime(): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">cxLocal
       <li><a class="reference" href="#cxLocal.t"
-    title="cxLocal(): untyped">cxLocal</a></li>
-  <li><a class="reference" href="#cxNow.t"
-    title="cxNow(): untyped">cxNow</a></li>
-  <li><a class="reference" href="#cxToday.t"
-    title="cxToday(): untyped">cxToday</a></li>
-  <li><a class="reference" href="#cxTime.t"
-    title="cxTime(): untyped">cxTime</a></li>
-  <li><a class="reference" href="#cxDateTime.t"
-    title="cxDateTime(): untyped">cxDateTime</a></li>
+    title="cxLocal(): untyped">cxLocal(): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">cxToday
+      <li><a class="reference" href="#cxToday.t"
+    title="cxToday(): untyped">cxToday(): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">cxNow
+      <li><a class="reference" href="#cxNow.t"
+    title="cxNow(): untyped">cxNow(): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">cxTime
+      <li><a class="reference" href="#cxTime.t"
+    title="cxTime(): untyped">cxTime(): untyped</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -858,7 +873,7 @@ Returns system uptime
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:57:56 UTC</small>
       </div>
     </div>
   </div>
