--- a/cxfontconsts.html
+++ b/cxfontconsts.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxfontconsts</title>
+<title>nimcx/cxfontconsts</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -64,7 +64,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxfontconsts</h1>
+    <h1 class="title">nimcx/cxfontconsts</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -5021,7 +5021,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:58:01 UTC</small>
       </div>
     </div>
   </div>
