--- a/cxhash.html
+++ b/cxhash.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxhash</title>
+<title>nimcx/cxhash</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -64,7 +64,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxhash</h1>
+    <h1 class="title">nimcx/cxhash</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -199,7 +199,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:57:56 UTC</small>
       </div>
     </div>
   </div>
