--- a/cxconsts.html
+++ b/cxconsts.html
@@ -34,7 +34,6 @@ function main() {
     }
   }
 
-  const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
   function switchTheme(e) {
       if (e.target.checked) {
           document.documentElement.setAttribute('data-theme', 'dark');
@@ -45,13 +44,19 @@ function main() {
       }
   }
 
-  toggleSwitch.addEventListener('change', switchTheme, false);
+  const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+  if (toggleSwitch !== null) {
+    toggleSwitch.addEventListener('change', switchTheme, false);
+  }
 
-  const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
+  var currentTheme = localStorage.getItem('theme');
+  if (!currentTheme && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+    currentTheme = 'dark';
+  }
   if (currentTheme) {
     document.documentElement.setAttribute('data-theme', currentTheme);
 
-    if (currentTheme === 'dark') {
+    if (currentTheme === 'dark' && toggleSwitch !== null) {
       toggleSwitch.checked = true;
     }
   }
@@ -1481,7 +1486,7 @@ window.addEventListener('DOMContentLoaded', main);
   <li><a class="reference" href="#wideDot"
     title="wideDot = &quot;⚫ &quot;">wideDot</a></li>
   <li><a class="reference" href="#iso_8601_aws"
-    title="iso_8601_aws = &quot;yyyyMMdd\&apos;T\&apos;HHmmss\&apos;Z\&apos;&quot;">iso_8601_aws</a></li>
+    title="iso_8601_aws = &quot;yyyyMMdd\'T\'HHmmss\'Z\'&quot;">iso_8601_aws</a></li>
 
   </ul>
 </li>
@@ -5487,14 +5492,14 @@ index into cxcolorNames
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="getFg,ForegroundColor"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#getFg%2CForegroundColor"><span class="Identifier">getFg</span></a><span class="Other">(</span><span class="Identifier">fg</span><span class="Other">:</span> <span class="Identifier">ForegroundColor</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#getFg%2CForegroundColor"><span class="Identifier">getFg</span></a><span class="Other">(</span><span class="Identifier">fg</span><span class="Other">:</span> <span class="Identifier">ForegroundColor</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 
 </dd>
 <a id="getBg,BackgroundColor"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#getBg%2CBackgroundColor"><span class="Identifier">getBg</span></a><span class="Other">(</span><span class="Identifier">bg</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#getBg%2CBackgroundColor"><span class="Identifier">getBg</span></a><span class="Other">(</span><span class="Identifier">bg</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -5510,7 +5515,7 @@ index into cxcolorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-03-31 13:57:56 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-07-03 09:58:22 UTC</small>
       </div>
     </div>
   </div>
